# razel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  deno.json
.dist/: .gitignore  publish-pypi.sh  pyproject.toml
.github/workflows/: bump-version-and-create-tag.ts  ci.yml  release.yml
apis/deno/: razel.ts
apis/python/: __init__.py  razel.py
examples/: deno.ts  python.py  razel.jsonl
examples/data/: .gitattributes  a.csv
include/deno/: razel.ts
include/python/: razel.py
razel/: Cargo.toml  build.rs
razel-bench/: Cargo.toml
razel-bench/src/: main.rs  types.rs
razel-self-test/: Cargo.toml
razel-self-test/src/: main.rs
razel-server/: Cargo.toml
razel-server/examples/: localhost.toml  multi_node.toml
razel-server/src/: config.rs  job_database.rs  job_worker.rs  lib.rs  main.rs  project.rs  rpc_endpoint.rs  rpc_messages.rs  rpc_utils_server.rs  server.rs  types.rs  webui_types.rs  worker.rs
razel-server/src/auth/: gitlab.rs  interactive.rs  jwt.rs  mod.rs
razel-server/src/server/: connections.rs  scheduler.rs  storage.rs
razel-server/src/webui/: README.md  app.rs  finished_jobs.rs  human_format.rs  mod.rs  nodes.rs  running_jobs.rs  stats_ws.rs  topbar_stats.rs  utils.rs
razel-server/src/webui/style/: main.scss
razel-server/tests/: integration_test.rs
razel/src/: cli.rs  command.rs  config.rs  file.rs  lib.rs  main.rs  parse_batch.rs  razel.rs  razel_jsonl.rs  rules.rs  sandbox.rs  scheduler.rs  targets_builder.rs  types.rs
razel/src/bazel_remote_exec/: mod.rs
razel/src/bazel_remote_exec/proto/: download.sh
razel/src/cache/: cache.rs  digest.rs  local_cache.rs  remote_cache.rs
razel/src/cli/: http_remote_exec_config.rs
razel/src/executors/: command.rs  custom_command.rs  execution_result.rs  executor.rs  http_remote.rs  task.rs  task_csv.rs  task_http.rs  task_http_remote_exec.rs  task_tools.rs  wasi.rs
razel/src/metadata/: graphs.in.html  graphs.rs  junit_writer.rs  log_file.rs  log_writer.rs  measurements.rs  profile.rs  report.rs  tags.rs
razel/src/razel/: filter.rs  import.rs  remote_exec.rs  system.rs
razel/src/remote_exec/: client.rs  job.rs  rpc_endpoint.rs  rpc_messages.rs  rpc_utils.rs  rpc_utils_client.rs
razel/src/targets_builder/: filter.rs
razel/src/tasks/: cmake.rs  csv.rs  git.rs  git_lfs.rs  http.rs  tools.rs
razel/src/types/: dependency_graph.rs  job.rs  razel_jsonl.rs  razel_jsonl_io.rs  tags.rs  target.rs  tasks.rs  worker_tags.rs
razel/src/utils/: arena.rs  cmake_file_api.rs  ctest.rs  ctest_json.rs  directories.rs  file_permissions.rs  git.rs  git_lfs.rs  hardlink.rs  helpers.rs  resources_linux.rs  resources_unimplemented.rs  symlink.rs  test_utils.rs  tui.rs  worker_utils.rs
src/: README.md  cache.rs  cli.rs  command.rs  config.rs  file.rs  lib.rs  main.rs  measurements.rs  parse.rs  parse_batch.rs  parse_jsonl.rs  razel.rs  razel_jsonl.rs  ready_or_running.rs  rules.rs  sandbox.rs  scheduler.rs  types.rs
src/bazel_remote_exec/proto/: download.sh
src/cache/: README.md  cache.rs  digest.rs  local_cache.rs  remote_cache.rs
src/executors/: custom_command.rs  execution_result.rs  executor.rs  http_remote.rs  task.rs  wasi.rs
src/metadata/: graphs.rs  log_file.rs  measurements.rs  profile.rs  report.rs  tags.rs
src/razel/: filter.rs  import.rs  system.rs
src/tasks/: csv.rs  http.rs  tools.rs
src/utils/: arena.rs  file_permissions.rs  hardlink.rs  helpers.rs  resources.rs  resources_linux.rs  resources_unimplemented.rs  symlink.rs  tui.rs
test/: .gitignore  README.md  batch.sh  build_cmake.sh  deno.ts  deno_import_map.json  python.py  razel.jsonl
test/data/: f.csv  say_hi.c
