[workspace]
members = ["razel", "razel-bench", "razel-self-test"]
resolver = "3"

[workspace.package]
version = "0.5.6"
edition = "2021"
rust-version = "1.70"
homepage = "https://github.com/reu-dev/razel"
repository = "https://github.com/reu-dev/razel"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
itertools = "0.14"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"

# optimize some dependencies also for dev profile
[profile.dev.package.sha2]
opt-level = 3

[profile.release]
strip = "symbols"
