[workspace]
members = ["razel", "razel-bench", "razel-self-test", "razel-server"]
resolver = "3"

[workspace.package]
version = "0.5.6"
edition = "2021"
rust-version = "1.70"
authors = ["Stefan Reuschl <stefan@reu-dev.de>"]
description = "a command executor with caching for data processing pipelines"
categories = ["caching", "concurrency", "command-line-utilities", "development-tools::testing", "filesystem"]
homepage = "https://github.com/reu-dev/razel"
repository = "https://github.com/reu-dev/razel"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
quinn = { version = "0.11.9" }
itertools = "0.14"
log = "0.4"
postcard = "1.1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "local-time"] }

url = { version = "2", features = ["serde"] }

# optimize some dependencies also for dev profile
[profile.dev.package.sha2]
opt-level = 3

[profile.release]
strip = "symbols"
