[package]
name = "razel-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
razel = {path = ".."}
anyhow = { workspace = true }
clap = { workspace = true }
glob = "0.3"
itertools = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
