[package]
name = "razel-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
razel = { path = "../razel" }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
