[package]
name = "razel-server"
authors.workspace = true
description.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
razel = { path = "../razel", features = ["full", "remote_exec"] }
anyhow = { workspace = true }
clap = { workspace = true }
quinn = { workspace = true }
rcgen = "0.14"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
directories = { workspace = true }
