[package]
name = "razel-server"
authors.workspace = true
description.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
razel = { path = "../razel", default-features = false }
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
itertools = { workspace = true }
quinn = { workspace = true, optional = true }
rcgen = { version = "0.14", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
postcard = { workspace = true, features = ["use-std"] }
serde = { workspace = true }
toml = { version = "0.9", optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true }

# webui
axum = { version = "0.8", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
futures = "0.3"
leptos = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
wasm-bindgen = { version = "0.2.114", optional = true }

[features]
default = ["server"]
server = [
    "razel/full",
    "razel/remote_exec",
    "dep:tokio",
    "dep:clap",
    "dep:directories",
    "dep:quinn",
    "dep:rcgen",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:toml",
    "dep:url",
    "ssr"
]
# webui frontend compiled for WASM
hydrate = [
    "uuid/js",
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
# webui backend
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:tracing-subscriber",
    "server",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "webui"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "src/webui/style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "src/webui/public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]
# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false
# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]
# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
